--- a/app/src/main/res/layout/activity_camion.xml
+++ b/app/src/main/res/layout/activity_camion.xml
@@ -27,9 +27,9 @@
 
                         <ImageView
                             android:id="@+id/imageView6"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/cosetturs" />
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:srcCompat="@drawable/loc" />
                     </LinearLayout>
 
                     <LinearLayout
