--- a/app/src/main/res/layout/activity_paypal.xml
+++ b/app/src/main/res/layout/activity_paypal.xml
@@ -11,20 +11,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="50dp"
         android:background="@android:color/background_light"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="91dp"
+            android:layout_width="63dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageView9"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/cosetturs" />
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/loc" />
         </LinearLayout>
 
         <LinearLayout
