--- a/app/src/main/res/layout/activity_rutas.xml
+++ b/app/src/main/res/layout/activity_rutas.xml
@@ -27,8 +27,8 @@
                 <ImageView
                     android:id="@+id/imageView9"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cosetturs" />
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/loc" />
             </LinearLayout>
 
             <LinearLayout
@@ -69,9 +69,9 @@
                         android:id="@+id/cardThree"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="2dp"
                         android:layout_toEndOf="@+id/cardTwo"
-                        android:padding="2dp">
+                        android:padding="2dp"
+                        android:layout_toRightOf="@+id/cardTwo">
 
 
                         <ImageView
@@ -86,7 +86,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_toEndOf="@+id/cardfor"
-                        android:padding="2dp">
+                        android:padding="2dp"
+                        android:layout_toRightOf="@+id/cardfor">
 
 
                         <ImageView
@@ -116,15 +117,15 @@
                         android:id="@+id/cardTwo"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="2dp"
-                        android:layout_toEndOf="@+id/cardOne"
-                        android:padding="2dp">
+                       android:layout_toEndOf="@+id/cardOne"
+                        android:padding="2dp"
+                        android:layout_toRightOf="@+id/cardOne">
 
 
                         <ImageView
                             android:id="@+id/imageView13"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             app:srcCompat="@drawable/poster5white" />
                     </android.support.v7.widget.CardView>
                 </RelativeLayout>
