--- a/app/src/main/res/layout/activity_rutas.xml
+++ b/app/src/main/res/layout/activity_rutas.xml
@@ -15,12 +15,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="64dp"
+            android:layout_height="10mm"
             android:background="@android:color/background_light"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="91dp"
+                android:layout_width="10mm"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
@@ -28,7 +28,7 @@
                     android:id="@+id/imageView9"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/loc" />
+                    app:srcCompat="@drawable/arriw" />
             </LinearLayout>
 
             <LinearLayout
@@ -41,9 +41,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:textSize="25dp"
+                    android:text="Rutas de Servicio"
                     android:textColor="#393d42"
-                    android:text="Rutas de Servicio" />
+                    android:textSize="25dp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -70,15 +70,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_toEndOf="@+id/cardTwo"
-                        android:padding="2dp"
-                        android:layout_toRightOf="@+id/cardTwo">
+                        android:layout_toRightOf="@+id/cardTwo"
+                        android:padding="2dp">
 
 
                         <ImageView
                             android:id="@+id/imageView11"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/poster2white" />
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:srcCompat="@drawable/ciz" />
                     </android.support.v7.widget.CardView>
 
                     <android.support.v7.widget.CardView
@@ -86,15 +86,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_toEndOf="@+id/cardfor"
-                        android:padding="2dp"
-                        android:layout_toRightOf="@+id/cardfor">
+                        android:layout_toRightOf="@+id/cardfor"
+                        android:padding="2dp">
 
 
                         <ImageView
                             android:id="@+id/imageView12"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/poster3white" />
+                            app:srcCompat="@drawable/co" />
                     </android.support.v7.widget.CardView>
 
 
@@ -107,9 +107,9 @@
 
                         <ImageView
                             android:id="@+id/imageView17"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/poster4white" />
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:srcCompat="@drawable/noc" />
                     </android.support.v7.widget.CardView>
 
 
@@ -117,16 +117,32 @@
                         android:id="@+id/cardTwo"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                       android:layout_toEndOf="@+id/cardOne"
-                        android:padding="2dp"
-                        android:layout_toRightOf="@+id/cardOne">
+                        android:layout_toEndOf="@+id/cardOne"
+                        android:layout_toRightOf="@+id/cardOne"
+                        android:padding="2dp">
 
 
                         <ImageView
                             android:id="@+id/imageView13"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:srcCompat="@drawable/poster5white" />
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/nau" />
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cardfive"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_toEndOf="@+id/cardThree"
+                        android:layout_toRightOf="@+id/cardThree"
+                        android:padding="2dp">
+
+
+                        <ImageView
+                            android:id="@+id/ima"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/poster4white" />
                     </android.support.v7.widget.CardView>
                 </RelativeLayout>
             </HorizontalScrollView>
