--- a/app/src/main/res/layout/nav_header_menu.xml
+++ b/app/src/main/res/layout/nav_header_menu.xml
@@ -28,9 +28,9 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/usurpador"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:text="@string/Usuario" />
+        />
 
 </LinearLayout>
