--- a/app/src/main/res/layout/activity_recuperar.xml
+++ b/app/src/main/res/layout/activity_recuperar.xml
@@ -105,13 +105,13 @@
                 android:textSize="20dp" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/recover"
                 android:layout_width="120dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:textColor="@android:color/background_light"
                 android:background="@drawable/botones"
-                android:text="recuperar" />
+                android:text="recuperar"
+                android:textColor="@android:color/background_light" />
         </LinearLayout>
 
     </LinearLayout>
