--- a/app/src/main/res/layout/activity_recuperar.xml
+++ b/app/src/main/res/layout/activity_recuperar.xml
@@ -44,6 +44,12 @@
                     android:textSize="20dp" />
             </LinearLayout>
         </LinearLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/stilo">
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -54,65 +60,75 @@
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
-                android:layout_height="38dp" />
+                android:layout_height="29dp" />
 
             <EditText
                 android:id="@+id/correo1"
-                android:layout_width="250dp"
+                android:layout_width="280dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center"
+                android:layout_margin="5dp"
                 android:background="@drawable/conotor"
                 android:ems="10"
+                android:gravity="center"
                 android:inputType="textEmailAddress" />
 
             <TextView
 
                 android:layout_width="match_parent"
-                android:layout_height="29dp"
+                android:layout_height="20dp"
                 android:gravity="center"
                 android:textSize="20dp" />
 
             <EditText
                 android:id="@+id/passw1"
-                android:layout_width="250dp"
+                android:layout_width="280dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center"
+                android:layout_margin="5dp"
                 android:background="@drawable/conotor"
                 android:ems="10"
-                android:inputType="textEmailAddress" />
+                android:gravity="center"
+                android:inputType="textPassword" />
 
             <TextView
 
                 android:layout_width="match_parent"
-                android:layout_height="33dp"
+                android:layout_height="20dp"
                 android:gravity="center"
                 android:textSize="20dp" />
 
             <EditText
                 android:id="@+id/passw2"
-                android:layout_width="250dp"
+                android:layout_width="280dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center"
+                android:layout_margin="5dp"
                 android:background="@drawable/conotor"
                 android:ems="10"
-                android:inputType="textEmailAddress" />
+                android:gravity="center"
+                android:inputType="textPassword" />
 
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="20dp"
                 android:gravity="center"
                 android:textSize="20dp" />
 
             <Button
                 android:id="@+id/recover"
-                android:layout_width="120dp"
-                android:layout_height="40dp"
+                android:layout_width="203dp"
+                android:layout_height="35dp"
                 android:layout_gravity="center"
                 android:background="@drawable/botones"
-                android:text="recuperar"
+                android:text="Recuperar Contraseña"
                 android:textColor="@android:color/background_light" />
         </LinearLayout>
+
+
+
+        </ScrollView>
 
     </LinearLayout>
 
