--- a/app/src/main/res/layout/activity_instrucciones.xml
+++ b/app/src/main/res/layout/activity_instrucciones.xml
@@ -4,27 +4,164 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:orientation="vertical"
+    android:background="@drawable/stilo"
     tools:context=".Instrucciones">
 
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="97mm"
+        android:orientation="horizontal">
 
-
-        <HorizontalScrollView
+        <android.support.v7.widget.CardView
+            android:id="@+id/card2"
             android:layout_width="match_parent"
-            android:layout_height="70mm">
+            android:layout_height="match_parent"
+            android:layout_margin="10dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="350dp"
                 android:layout_height="match_parent"
-                android:orientation="horizontal" >
-            </LinearLayout>
-        </HorizontalScrollView>
+                android:background="@drawable/header"
+                android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:text="Bienvenido"
+                    android:textSize="30dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_margin="10dp"
+                    android:text="Esta es la Cosetturapp con ella podras suscribirte a cualquiera de nuestros servicios; ademas de conocer mas acerca de nosostros sigue atentamente las siguientes intruciones  "
+                    android:textSize="20dp" />
+
+                <ImageView
+                    android:id="@+id/imageView14"
+                    android:layout_width="match_parent"
+                    android:layout_height="151dp"
+                    app:srcCompat="@drawable/loc" />
+
+                <TextView
+                    android:id="@+id/textView33"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textColor="@android:color/holo_blue_light"
+                    android:textSize="26dp"
+                    android:text="Desliza" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+             android:layout_margin="10dp">
+
+            <LinearLayout
+                android:layout_width="350dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/header"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:text="Registrate"
+                    android:textSize="30dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_margin="10dp"
+                    android:text="Esta es la Cosetturapp con ella podras suscribirte a cualquiera de nuestros servicios; ademas de conocer mas acerca de nosostros sigue atentamente las siguientes intruciones  "
+                    android:textSize="20dp" />
+
+                <ImageView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="151dp"
+                    app:srcCompat="@drawable/loc" />
+
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textColor="@android:color/holo_blue_light"
+                    android:textSize="26dp"
+                    android:text="Delsiza" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:id="@+id/card1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp">
+
+            <LinearLayout
+                android:layout_width="350dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/header"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:text="Inicia sesion"
+                    android:textSize="30dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:gravity="center"
+                    android:text="Esta es la Cosetturapp con ella podras suscribirte a cualquiera de nuestros servicios; ademas de conocer mas acerca de nosostros sigue atentamente las siguientes intruciones  "
+                    android:textSize="20dp" />
+
+                <ImageView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="151dp"
+                    app:srcCompat="@drawable/loc" />
+
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textColor="@android:color/holo_blue_light"
+                    android:textSize="26dp"
+                    android:text="Delsiza" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+    </HorizontalScrollView>
 
     <Button
         android:id="@+id/aceptar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:text="Button" />
+        android:layout_width="50mm"
+        android:layout_height="35dp"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:textColor="#ffffff"
+        android:background="@drawable/buton2"
+        android:text="Siguiente" />
 </LinearLayout>
