--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,7 @@
     android:background="@drawable/menuss"
     tools:context=".MainActivity">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
 
             <LinearLayout
@@ -25,7 +19,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="8mm"
                     android:background="@drawable/header"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_margin="7dp">
 
                          <ImageView
                             android:id="@+id/imageView2"
@@ -54,6 +49,14 @@
                             android:textSize="27dp" />
 
                 </LinearLayout>
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -61,16 +64,14 @@
 
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/textView37"
-                        android:layout_width="match_parent"
-                        android:layout_height="20dp" />
+
 
                     <ImageView
                         android:id="@+id/imageView3"
                         android:layout_width="match_parent"
-                        android:layout_height="163dp"
+                        android:layout_height="153dp"
                         android:layout_weight="12"
+                        android:layout_margin="10dp"
                         app:srcCompat="@drawable/charte" />
                 </LinearLayout>
 
@@ -155,7 +156,7 @@
 
                                 <Button
                                     android:id="@+id/in"
-                                    android:layout_width="140dp"
+                                    android:layout_width="210dp"
                                     android:layout_height="34dp"
                                     android:layout_centerVertical="true"
                                     android:layout_gravity="center"
@@ -165,7 +166,7 @@
                                     android:textColor="@android:color/background_light" />
                                 <Button
                                     android:id="@+id/re"
-                                    android:layout_width="140dp"
+                                    android:layout_width="210dp"
                                     android:layout_height="34dp"
                                     android:layout_gravity="center"
                                     android:textSize="15dp"
@@ -209,8 +210,8 @@
                      android:text="Autenticate con Google"
                      android:textColor="#800000" /> -->
 
-
+                </LinearLayout>
+                </ScrollView>
              </LinearLayout>
-         </LinearLayout>
-     </ScrollView>
+
  </LinearLayout>
