--- a/app/src/main/res/layout/activity_rutas.xml
+++ b/app/src/main/res/layout/activity_rutas.xml
@@ -38,47 +38,26 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+
 
             <HorizontalScrollView
                 android:id="@+id/horizontalScrollView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/your_id"
-                android:scrollbars="none">
+                android:layout_height="wrap_content">
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:padding="2dp">
-
-                    <android.support.v7.widget.CardView
-                        android:id="@+id/cardThree"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_toEndOf="@+id/cardTwo"
-                        android:layout_toRightOf="@+id/cardTwo"
-                        android:padding="2dp">
+                  android:orientation="horizontal">
 
 
-                        <ImageView
-                            android:id="@+id/imageView11"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:srcCompat="@drawable/cisco" />
-                    </android.support.v7.widget.CardView>
 
                     <android.support.v7.widget.CardView
                         android:id="@+id/cardOne"
-                        android:layout_width="match_parent"
+                        android:layout_width="60mm"
                         android:layout_height="match_parent"
-                        android:layout_toEndOf="@+id/cardfor"
-                        android:layout_toRightOf="@+id/cardfor"
-                        android:padding="2dp">
+                     android:background="@drawable/header"
+                        android:layout_margin="10dp">
 
 
                         <ImageView
@@ -91,35 +70,25 @@
 
                     <android.support.v7.widget.CardView
                         android:id="@+id/cardfor"
-                        android:layout_width="match_parent"
+                        android:layout_width="103mm"
                         android:layout_height="match_parent"
-                        android:padding="2dp">
+                        android:layout_margin="10dp">
 
 
                         <ImageView
                             android:id="@+id/imageView17"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_gravity="center"
                             app:srcCompat="@drawable/noche" />
-
-                        <TextView
-                            android:id="@+id/textView"
-                            android:layout_width="200dp"
-                            android:layout_height="50dp"
-                            android:layout_gravity="center_vertical"
-                            android:textSize="35dp"
-                            android:textColor="@color/colorPrimary"
-                            android:text="Desliza" />
                     </android.support.v7.widget.CardView>
 
 
                     <android.support.v7.widget.CardView
                         android:id="@+id/cardTwo"
-                        android:layout_width="match_parent"
+                        android:layout_width="55mm"
                         android:layout_height="match_parent"
-                        android:layout_toEndOf="@+id/cardOne"
-                        android:layout_toRightOf="@+id/cardOne"
-                        android:padding="2dp">
+                        android:layout_margin="10dp">
 
 
                         <ImageView
@@ -131,11 +100,9 @@
 
                     <android.support.v7.widget.CardView
                         android:id="@+id/cardfive"
-                        android:layout_width="match_parent"
+                        android:layout_width="55mm"
                         android:layout_height="match_parent"
-                        android:layout_toEndOf="@+id/cardThree"
-                        android:layout_toRightOf="@+id/cardThree"
-                        android:padding="2dp">
+                        android:layout_margin="10dp">
 
 
                         <ImageView
@@ -144,18 +111,27 @@
                             android:layout_height="wrap_content"
                             app:srcCompat="@drawable/tlane" />
                     </android.support.v7.widget.CardView>
-                </RelativeLayout>
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cardThree"
+                        android:layout_width="55mm"
+                        android:layout_height="match_parent"
+                        android:layout_margin="10dp">
+
+
+                        <ImageView
+                            android:id="@+id/imageView11"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:srcCompat="@drawable/cisco" />
+                    </android.support.v7.widget.CardView>
+                </LinearLayout>
             </HorizontalScrollView>
 
 
-        </LinearLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/stilo"
-            android:orientation="horizontal"></LinearLayout>
+
+
 
 
 </LinearLayout>
