--- a/app/src/main/res/layout/activity_cuentas.xml
+++ b/app/src/main/res/layout/activity_cuentas.xml
@@ -19,7 +19,7 @@
             <ImageView
                 android:id="@+id/atr"
                 android:layout_width="8mm"
-                android:layout_height="55dp"
+                android:layout_height="wrap_content"
                 app:srcCompat="@drawable/arriw" />
 
 
@@ -29,7 +29,7 @@
             <TextView
                 android:id="@+id/textView21"
                 android:layout_width="match_parent"
-                android:layout_height="59dp"
+                android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="Referencias Bancarias"
                 android:textColor="#393d42"
@@ -48,12 +48,14 @@
             android:id="@+id/imageView15"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             app:srcCompat="@drawable/r1" />
 
         <ImageView
             android:id="@+id/imageView16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             app:srcCompat="@drawable/r2" />
     </LinearLayout>
 
