--- a/app/src/main/res/layout/activity_camiones.xml
+++ b/app/src/main/res/layout/activity_camiones.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="8mm"
+        android:layout_margin="4dp"
         android:background="@drawable/header"
         android:orientation="horizontal">
 
