--- a/app/src/main/res/layout/activity_cuentas.xml
+++ b/app/src/main/res/layout/activity_cuentas.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="8mm"
+        android:layout_margin="4dp"
         android:background="@drawable/header"
         android:orientation="horizontal">
 
