--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,14 +20,14 @@
                     android:layout_height="8mm"
                     android:background="@drawable/header"
                     android:orientation="horizontal"
-                    android:layout_margin="7dp">
+                    android:layout_margin="4dp">
 
                          <ImageView
                             android:id="@+id/imageView2"
                             android:layout_width="79dp"
                             android:layout_height="6.5mm"
                              android:layout_gravity="center"
-                            app:srcCompat="@drawable/logo1" />
+                            app:srcCompat="@drawable/loc" />
 
 
 
