--- a/app/src/main/res/layout/activity_recuperar.xml
+++ b/app/src/main/res/layout/activity_recuperar.xml
@@ -14,6 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="8mm"
+            android:layout_margin="4dp"
             android:background="@drawable/header"
             android:orientation="horizontal">
 
