--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -14,6 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="8mm"
+        android:layout_margin="4dp"
         android:background="@drawable/header"
         android:orientation="horizontal">
 
@@ -29,7 +30,6 @@ android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-
             android:text="Bienvenido       "
             android:textColor="#393d42"
             android:textSize="27dp" />
