--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -12,51 +12,40 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp"
         android:layout_gravity="center"
+        android:layout_margin="20dp"
         android:background="#ffffff"
         android:orientation="vertical">
 
 
         <LinearLayout
             android:id="@+id/cont"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="20dp"
             android:background="#ffffff"
-            android:layout_margin="4mm"
 
-            android:orientation="horizontal"
-          >
+            android:orientation="horizontal">
 
             <ProgressBar
                 android:id="@+id/progressBar3"
                 style="?attr/actionBarTabBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="139dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
 
                 android:visibility="visible" />
 
-            <TextView
-                android:id="@+id/tex"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_margin="5dp"
-                android:textSize="17dp"
-                android:text="Conectando con el servidor remoto por favor espere un momento..."
-                android:textStyle="bold" />
-
         </LinearLayout>
+
         <ImageView
             android:id="@+id/imageView18"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="382dp"
             android:layout_gravity="center"
-            android:background="#ffffff"
             android:layout_margin="10dp"
+            android:background="#ffffff"
             app:srcCompat="@drawable/logoss" />
 
     </LinearLayout>
